fixed overflow scroll issues that appeared on some tablet and mobile devices for the flag line and solar panel secions (parts on scroll) .

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -3098,3 +3098,229 @@ Stylesheet: Helpers
   -ms-animation-timing-function: ease-out;
   animation-timing-function: ease-out;
 }
+
+/* line 2, ../sass/partials/_solar-panels.scss */
+.c3xgm-about-decorative.c3xgm-about-solar-panels {
+  margin-bottom: 10%;
+  padding-bottom: 120%;
+  height: 0;
+  position: relative;
+}
+@media (min-width: 480px) {
+  /* line 2, ../sass/partials/_solar-panels.scss */
+  .c3xgm-about-decorative.c3xgm-about-solar-panels {
+    padding-bottom: 100%;
+  }
+}
+@media (min-width: 768px) {
+  /* line 2, ../sass/partials/_solar-panels.scss */
+  .c3xgm-about-decorative.c3xgm-about-solar-panels {
+    padding-bottom: 580px;
+    margin-bottom: 100px;
+  }
+}
+/* line 13, ../sass/partials/_solar-panels.scss */
+.c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-grey-car-holder {
+  height: 0;
+  width: 100%;
+  padding-bottom: 17.5%;
+  overflow: hidden;
+  position: absolute;
+  bottom: 0;
+}
+@media (min-width: 768px) {
+  /* line 13, ../sass/partials/_solar-panels.scss */
+  .c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-grey-car-holder {
+    padding-bottom: 10.75%;
+  }
+}
+@media (min-width: 906px) {
+  /* line 13, ../sass/partials/_solar-panels.scss */
+  .c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-grey-car-holder {
+    padding-bottom: 96px;
+  }
+}
+/* line 24, ../sass/partials/_solar-panels.scss */
+.c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-grey-side {
+  width: 45%;
+  height: 0;
+  padding-bottom: 17.5%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: auto;
+  margin: auto;
+  z-index: 10;
+}
+/* line 32, ../sass/partials/_solar-panels.scss */
+.c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-grey-side .c3xgm-about-wheel {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  -ms-background-size: cover;
+  background-size: cover;
+  height: 0;
+  display: block;
+  z-index: 200;
+  width: 13.142857%;
+  padding-bottom: 13.142857%;
+  position: absolute;
+  bottom: 23%;
+}
+@media (min-width: 768px) {
+  /* line 32, ../sass/partials/_solar-panels.scss */
+  .c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-grey-side .c3xgm-about-wheel {
+    height: 39px;
+    width: 39px;
+    padding-bottom: 0;
+    bottom: 12%;
+  }
+}
+/* line 49, ../sass/partials/_solar-panels.scss */
+.c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-grey-side .c3xgm-about-front-wheel {
+  right: 10.285714%;
+}
+@media (min-width: 768px) {
+  /* line 49, ../sass/partials/_solar-panels.scss */
+  .c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-grey-side .c3xgm-about-front-wheel {
+    right: 10.1%;
+  }
+}
+/* line 54, ../sass/partials/_solar-panels.scss */
+.c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-grey-side .c3xgm-about-back-wheel {
+  left: 16%;
+}
+@media (min-width: 768px) {
+  /* line 54, ../sass/partials/_solar-panels.scss */
+  .c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-grey-side .c3xgm-about-back-wheel {
+    left: 15.7%;
+  }
+}
+@media (min-width: 768px) {
+  /* line 24, ../sass/partials/_solar-panels.scss */
+  .c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-grey-side {
+    padding-bottom: 10.75%;
+    width: 31%;
+  }
+}
+@media (min-width: 906px) {
+  /* line 24, ../sass/partials/_solar-panels.scss */
+  .c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-grey-side {
+    padding-bottom: 96px;
+    width: 276px;
+  }
+}
+/* line 67, ../sass/partials/_solar-panels.scss */
+.c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-grey-side img {
+  width: 100%;
+}
+/* line 70, ../sass/partials/_solar-panels.scss */
+.c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-tree {
+  width: 66px;
+  height: 61px;
+  position: absolute;
+  left: 2%;
+  bottom: 40px;
+  z-index: -5;
+}
+/* line 75, ../sass/partials/_solar-panels.scss */
+.c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-tree img {
+  width: 100%;
+}
+@media (min-width: 481px) {
+  /* line 70, ../sass/partials/_solar-panels.scss */
+  .c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-tree {
+    width: 99px;
+    height: 93px;
+  }
+}
+@media (min-width: 768px) {
+  /* line 70, ../sass/partials/_solar-panels.scss */
+  .c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-tree {
+    margin: auto;
+  }
+}
+@media (min-width: 906px) {
+  /* line 70, ../sass/partials/_solar-panels.scss */
+  .c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-tree {
+    right: 0;
+    left: -63%;
+  }
+}
+/* line 81, ../sass/partials/_solar-panels.scss */
+.c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-solar-panels {
+  width: 127px;
+  height: 141px;
+  padding-bottom: 0;
+  position: absolute;
+  right: 25%;
+  bottom: 0;
+  z-index: -5;
+}
+/* line 86, ../sass/partials/_solar-panels.scss */
+.c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-solar-panels img {
+  width: 100%;
+}
+@media (min-width: 481px) {
+  /* line 81, ../sass/partials/_solar-panels.scss */
+  .c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-solar-panels {
+    bottom: 40px;
+  }
+}
+@media (min-width: 906px) {
+  /* line 81, ../sass/partials/_solar-panels.scss */
+  .c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-solar-panels {
+    width: 193px;
+    height: 213px;
+    left: 0;
+    right: -39%;
+    bottom: 30px;
+    margin: auto;
+  }
+}
+/* line 95, ../sass/partials/_solar-panels.scss */
+.c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-sun {
+  width: 16%;
+  max-width: 140px;
+  height: 0;
+  padding-bottom: 16%;
+  z-index: -1;
+  position: absolute;
+  top: 40%;
+  right: 5%;
+}
+/* line 101, ../sass/partials/_solar-panels.scss */
+.c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-sun img {
+  width: 100%;
+}
+@media (min-width: 400px) {
+  /* line 95, ../sass/partials/_solar-panels.scss */
+  .c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-sun {
+    padding-bottom: 100px;
+  }
+}
+@media (min-width: 768px) {
+  /* line 95, ../sass/partials/_solar-panels.scss */
+  .c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-sun {
+    top: 26%;
+    padding-bottom: 140px;
+  }
+}
+@media (min-width: 906px) {
+  /* line 95, ../sass/partials/_solar-panels.scss */
+  .c3xgm-about-decorative.c3xgm-about-solar-panels .c3xgm-about-sun {
+    left: 0;
+    right: -50%;
+    margin: auto;
+  }
+}
+
+/* line 108, ../sass/partials/_solar-panels.scss */
+.c3xgm-about-solar-road {
+  width: 100%;
+  height: 0;
+  padding-bottom: 40px;
+  position: absolute;
+  bottom: 0;
+  z-index: -2;
+}
